# PDAL-CPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: BenchmarkOSQP.cpp  BenchmarkPDAL.cpp  CMakeLists.txt  TestOSQP.cpp  TestPDAL.cpp
benchmark/data/: TestDataBenchmark.cpp  TestDataBenchmark.h
include/: LQProblem.h  Pdal.h  Settings.h  Types.h
src/: PDAL.cpp  Pdal.cpp
test/: CMakeLists.txt  TestData.cpp  TestData.h  TestOSQP.cpp  TestPdal.cpp  TestPdalWithSparseLDL.cpp
